--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 #-----------------------------------------------------------------------------------------
+# Project specifics
+#-----------------------------------------------------------------------------------------
+
+dist/
+
+#-----------------------------------------------------------------------------------------
 # Node
 #-----------------------------------------------------------------------------------------
 
