[TASK] Add backend setup
Closes #3

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 #-----------------------------------------------------------------------------------------
 
 dist/
+etc/
+.env
 
 #-----------------------------------------------------------------------------------------
 # Node
