--- a/static/package.json
+++ b/static/package.json
@@ -87,6 +87,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-devtools": "^3.4.1",
+    "redux-form": "^7.4.2",
     "redux-loop": "^4.3.3",
     "reselect": "^3.0.1",
     "styled-components": "^3.3.3",
