--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,6 @@ install:
 script:
     - npm run test
     - npm run build
+
+after_script:
+  - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run test:coveralls
